--- a/.src/Form/Searchfields.form
+++ b/.src/Form/Searchfields.form
@@ -74,6 +74,7 @@
       MoveScaled(21,1,19,4)
       Tag = "Filename"
       Text = ("FileName")
+      Value = CheckBox.True
     }
     { SearchComment CheckBox SearchFieldsCHK
       Name = "SearchComment"
