--- a/.src/Form/AudioConvert.form
+++ b/.src/Form/AudioConvert.form
@@ -56,8 +56,31 @@
     MoveScaled(0,21,81,31)
     Expand = True
   }
-  { ProgressBar1 ProgressBar
-    MoveScaled(1,56,79,3)
+  { Panel5 Panel
+    MoveScaled(1,53,80,3)
+    Arrangement = Arrange.Horizontal
+    Spacing = True
+    { Label5 Label
+      MoveScaled(0,0,16,4)
+      Text = ("Total")
+    }
+    { ProgressBar2 ProgressBar
+      MoveScaled(22,0,57,3)
+      Expand = True
+    }
+  }
+  { Panel4 Panel
+    MoveScaled(1,57,80,3)
+    Arrangement = Arrange.Horizontal
+    Spacing = True
+    { Label4 Label
+      MoveScaled(0,0,16,4)
+      Text = ("Current stream")
+    }
+    { ProgressBar1 ProgressBar
+      MoveScaled(22,0,57,3)
+      Expand = True
+    }
   }
   { Button1 Button
     MoveScaled(64,66,16,4)
