--- a/.src/Form/VideoEqualizer.form
+++ b/.src/Form/VideoEqualizer.form
@@ -1,12 +1,13 @@
 # Gambas Form File 3.0
 
 { Form Form
-  MoveScaled(0,0,45,29)
+  MoveScaled(0,0,46,29)
   Text = ("Video Equalizer")
   Icon = Picture["icon:/16/color"]
   Persistent = True
   Stacking = Window.Above
   Arrangement = Arrange.Vertical
+  AutoResize = True
   Spacing = True
   Margin = True
   Padding = 4
@@ -32,10 +33,24 @@
       Picture = Picture["icon:/16/help"]
     }
   }
-  { ApplyEqCheckbox CheckBox
-    MoveScaled(0,0,40,4)
-    ToolTip = ("Note that this can conflicts with Eq2 and hue filter settings")
-    Text = ("Auto apply those values")
+  { Panel1 Panel
+    MoveScaled(0,0,45,4)
+    Arrangement = Arrange.Horizontal
+    AutoResize = True
+    Spacing = True
+    { ApplyEqCheckbox CheckBox
+      MoveScaled(0,0,25,4)
+      ToolTip = ("Note that this can conflicts with Eq2 and hue filter settings")
+      AutoResize = True
+      Text = ("Auto apply those values")
+    }
+    { Button1 Button
+      MoveScaled(27,0,16,4)
+      ToolTip = ("Restore default settings")
+      AutoResize = True
+      Text = ("Restore all")
+      Picture = Picture["icon:/small/clear"]
+    }
   }
   { HBox1 HBox
     MoveScaled(0,5,45,4)
@@ -45,7 +60,7 @@
     { PictureBox1 PictureBox
       MoveScaled(1,1,3,3)
       Picture = Picture["eqbrightness.png"]
-      Alignment = Align.Left
+      Alignment = Align.Center
     }
     { ToolButton1 ToolButton Clears
       Name = "ToolButton1"
@@ -73,7 +88,7 @@
     { PictureBox2 PictureBox
       MoveScaled(1,1,3,3)
       Picture = Picture["eqcontrast.png"]
-      Alignment = Align.Left
+      Alignment = Align.Center
     }
     { ToolButton2 ToolButton Clears
       Name = "ToolButton2"
