--- a/.src/Form/VideoEqualizer.form
+++ b/.src/Form/VideoEqualizer.form
@@ -1,7 +1,7 @@
 # Gambas Form File 3.0
 
 { Form Form
-  MoveScaled(0,0,46,29)
+  MoveScaled(0,0,47,34)
   Text = ("Video Equalizer")
   Icon = Picture["icon:/16/color"]
   Persistent = True
@@ -34,7 +34,7 @@
     }
   }
   { Panel1 Panel
-    MoveScaled(0,0,45,4)
+    MoveScaled(1,0,45,4)
     Arrangement = Arrange.Horizontal
     AutoResize = True
     Spacing = True
@@ -53,7 +53,7 @@
     }
   }
   { HBox1 HBox
-    MoveScaled(0,5,45,4)
+    MoveScaled(1,5,45,4)
     ToolTip = ("Brightness")
     Expand = True
     Spacing = True
@@ -81,7 +81,7 @@
     }
   }
   { HBox2 HBox
-    MoveScaled(0,9,45,4)
+    MoveScaled(1,9,45,4)
     ToolTip = ("Contrast")
     Expand = True
     Spacing = True
@@ -109,7 +109,7 @@
     }
   }
   { HBox3 HBox
-    MoveScaled(0,13,45,4)
+    MoveScaled(1,13,45,4)
     ToolTip = ("Gamma")
     Expand = True
     Spacing = True
@@ -137,7 +137,7 @@
     }
   }
   { HBox4 HBox
-    MoveScaled(0,17,45,4)
+    MoveScaled(1,17,45,4)
     ToolTip = ("Hue")
     Expand = True
     Spacing = True
@@ -165,7 +165,7 @@
     }
   }
   { HBox5 HBox
-    MoveScaled(0,21,45,4)
+    MoveScaled(1,21,45,4)
     ToolTip = ("Saturation")
     Expand = True
     Spacing = True
@@ -190,6 +190,33 @@
       Name = "SpinBox5"
       MoveScaled(35,0,8,4)
       MinValue = -100
+    }
+  }
+  { Separator1 Separator
+    MoveScaled(1,25,44,1)
+  }
+  { HBox6 HBox
+    MoveScaled(1,26,45,4)
+    ToolTip = ("Overbright:\nPush contrast trying to preserve color details.\nUseful for low contrast videos or low contrast displays.\nMay produce clipping/saturation artifacts.\n")
+    Expand = True
+    Spacing = True
+    { PictureBox6 PictureBox
+      MoveScaled(1,1,3,3)
+      Picture = Picture["icon:/16/wizard"]
+      Alignment = Align.Center
+    }
+    { ToolButton6 ToolButton Clears
+      Name = "ToolButton6"
+      MoveScaled(4,0,4,4)
+      Picture = Picture["icon:/16/clear"]
+    }
+    { Slider6 Slider
+      MoveScaled(9,0,25,3)
+      Tag = "saturation"
+      Expand = True
+    }
+    { SpinBox6 SpinBox
+      MoveScaled(35,0,8,4)
     }
   }
 }
