--- a/.src/Form/VideoEqualizer.form
+++ b/.src/Form/VideoEqualizer.form
@@ -1,7 +1,7 @@
 # Gambas Form File 3.0
 
 { Form Form
-  MoveScaled(0,0,47,34)
+  MoveScaled(0,0,47,45)
   Text = ("Video Equalizer")
   Icon = Picture["icon:/16/color"]
   Persistent = True
@@ -76,7 +76,7 @@
     }
     { SpinBox1 SpinBox SpinBoxes
       Name = "SpinBox1"
-      MoveScaled(35,0,8,4)
+      MoveScaled(36,0,7,4)
       MinValue = -100
     }
   }
@@ -104,7 +104,7 @@
     }
     { SpinBox2 SpinBox SpinBoxes
       Name = "SpinBox2"
-      MoveScaled(35,0,8,4)
+      MoveScaled(36,0,7,4)
       MinValue = -100
     }
   }
@@ -132,7 +132,7 @@
     }
     { SpinBox3 SpinBox SpinBoxes
       Name = "SpinBox3"
-      MoveScaled(35,0,8,4)
+      MoveScaled(36,0,7,4)
       MinValue = -100
     }
   }
@@ -160,7 +160,7 @@
     }
     { SpinBox4 SpinBox SpinBoxes
       Name = "SpinBox4"
-      MoveScaled(35,0,8,4)
+      MoveScaled(36,0,7,4)
       MinValue = -100
     }
   }
@@ -188,17 +188,50 @@
     }
     { SpinBox5 SpinBox SpinBoxes
       Name = "SpinBox5"
-      MoveScaled(35,0,8,4)
+      MoveScaled(36,0,7,4)
       MinValue = -100
     }
   }
   { Separator1 Separator
     MoveScaled(1,25,44,1)
   }
+  { Label1 Label
+    MoveScaled(11,26,24,4)
+    AutoResize = True
+    Text = ("OverBright strength")
+    Alignment = Align.Center
+  }
+  { HBox7 HBox
+    MoveScaled(1,31,45,4)
+    ToolTip = ("Dynamic overbright strength:\nWhen usinng dynamic overbright, this slider controls\nhow much you want the video to be altered by it.")
+    Expand = True
+    AutoResize = True
+    Spacing = True
+    { CheckDynamicOverbright CheckBox
+      MoveScaled(1,0,13,4)
+      AutoResize = True
+      Text = ("Dynamic")
+    }
+    { Slider7 Slider
+      MoveScaled(15,0,19,3)
+      Tag = "saturation"
+      Expand = True
+      MinValue = 1
+      MaxValue = 10
+      Value = 3
+    }
+    { SpinBox7 SpinBox
+      MoveScaled(36,0,7,4)
+      MinValue = 1
+      MaxValue = 10
+      Value = 3
+    }
+  }
   { HBox6 HBox
-    MoveScaled(1,26,45,4)
+    MoveScaled(1,36,45,4)
     ToolTip = ("Overbright:\nPush contrast trying to preserve color details.\nUseful for low contrast videos or low contrast displays.\nMay produce clipping/saturation artifacts.\n\nWorks best with Xv and GL video drivers.")
     Expand = True
+    AutoResize = True
     Spacing = True
     { PictureBox6 PictureBox
       MoveScaled(1,1,3,3)
@@ -216,7 +249,10 @@
       Expand = True
     }
     { SpinBox6 SpinBox
-      MoveScaled(35,0,8,4)
+      MoveScaled(36,0,7,4)
     }
+  }
+  { Separator2 Separator
+    MoveScaled(1,41,44,1)
   }
 }
